Update cache when an instance table is deleted

Manually cherry-picked from 6.8

Fixes: QTBUG-128370
Change-Id: I9d9e651123bf6b547465b5b5cede518a40cc601d
Reviewed-by: Christian Strømme <christian.stromme@qt.io>