src/runtimerender/rendererimpl/qssgrenderer.cpp
@@ -206,6 +206,9 @@ static void cleanupResourcesImpl(const QSSGRenderContextInterface &rci, const Co
         } else if (resource->type == QSSGRenderGraphObject::Type::TextureData) {
             auto textureData = static_cast<QSSGRenderTextureData *>(resource);
             bufferManager->releaseTextureData(textureData);
+        } else if (resource->type == QSSGRenderGraphObject::Type::ModelInstance) {
+            auto *table = static_cast<QSSGRenderInstanceTable *>(resource);
+            rhi->releaseInstanceBuffer(table);
         }
 
         // ### There might be more types that need to be supported
